Reader: Fix divider alignment in stream (#8844)

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -16,7 +16,8 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	}
 
 	@media #{$reader-post-card-breakpoint-xlarge}  {
-		padding: 20px 15px;
+		margin: 0 15px;
+		padding: 20px 0;
 	}
 }
 
